--- a/packages/apps/app3/src/app/app.component.html
+++ b/packages/apps/app3/src/app/app.component.html
@@ -4,7 +4,7 @@ App 3 Angular
     <a [routerLink]="['/app3/a']"> Go to page a </a>
   </li>
   <li>
-    <a [routerLink]="['/app3/b']"> Go to page b </a>
+    <a [routerLink]="['app3/b']"> Go to page b </a>
   </li>
 </ul>
 <router-outlet></router-outlet>
