--- a/packages/apps/app4/src/app/app.component.html
+++ b/packages/apps/app4/src/app/app.component.html
@@ -4,7 +4,7 @@ App 4 Angular
     <a [routerLink]="['/app4/a']"> Go to page a </a>
   </li>
   <li>
-    <a [routerLink]="['/app4/b']"> Go to page b </a>
+    <a [routerLink]="['app4/b']"> Go to page b </a>
   </li>
 </ul>
 <router-outlet></router-outlet>
