--- a/packages/apps/app3/src/app/app.component.html
+++ b/packages/apps/app3/src/app/app.component.html
@@ -1,10 +1,3 @@
-App 3 Angular
-<ul>
-  <li>
-    <a [routerLink]="['/app3/a']"> Go to page a </a>
-  </li>
-  <li>
-    <a [routerLink]="['app3/b']"> Go to page b </a>
-  </li>
-</ul>
+App 3 Angular works!
+<hr />
 <router-outlet></router-outlet>
