--- a/packages/apps/app4/src/app/app.component.html
+++ b/packages/apps/app4/src/app/app.component.html
@@ -1,10 +1,3 @@
-App 4 Angular
-<ul>
-  <li>
-    <a [routerLink]="['/app4/a']"> Go to page a </a>
-  </li>
-  <li>
-    <a [routerLink]="['app4/b']"> Go to page b </a>
-  </li>
-</ul>
+App 4 Angular works!
+<hr />
 <router-outlet></router-outlet>
