nested routes react

--- a/packages/apps/app4/src/app/home/home.component.html
+++ b/packages/apps/app4/src/app/home/home.component.html
@@ -6,5 +6,11 @@
   <li>
     <a [routerLink]="['b']"> Go to page b </a>
   </li>
+  <li>
+    <a href="app1/b"> Go to React 1 page b </a>
+  </li>
+  <li>
+    <a href="app2/b"> Go to React 2 page b </a>
+  </li>
 </ul>
 <router-outlet></router-outlet>
