router angular and vite rename

--- a/packages/apps/app4/src/app/home/home.component.html
+++ b/packages/apps/app4/src/app/home/home.component.html
@@ -7,10 +7,10 @@
     <a [routerLink]="['b']"> Go to page b </a>
   </li>
   <li>
-    <a href="app1/b"> Go to React 1 page b </a>
+    <a [routerLink]="['/app1/b']"> Go to React 1 page b </a>
   </li>
   <li>
-    <a href="app2/b"> Go to React 2 page b </a>
+    <a [routerLink]="['/app2/b']"> Go to React 2 page b </a>
   </li>
 </ul>
 <router-outlet></router-outlet>
